--- a/TCE_SITE/index.html
+++ b/TCE_SITE/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>TCE EDUCATIONAL PORTAL</title>
+<title>TCE V2.0</title>
 <meta name="keywords" content="graphite theme, professional, free templates, CSS, HTML" />
 <meta name="description" content="Graphite Theme, professional free CSS template from templatemo.com website" />
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
